<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">只言片语</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	  <string name="zoom_position">zoom显示及位置</string>
    <string name="zoom_buttons">缩放</string>
    <string name="zoom_gestures">支持缩放</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
      <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="center_right">右中</string>
     <string name="compass">指南针</string>
       <string name="my_location">My Location</string>
    <string name="mylocation_layer">一键定位</string>
    <string name="scroll">支持移动</string>
     <string name="tilt">支持倾斜</string>
     <string name="rotate">支持旋转</string>
</resources>
