
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       
         >
    </com.amap.api.maps.MapView>
	
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/portrait_0" />
     <ImageButton
        android:id="@+id/share"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/imageButton"
        android:background="@drawable/getlocation"
          android:visibility="invisible"
       />
    

    <ImageButton
        android:id="@+id/feedback"
        android:layout_width="30dp"
        android:layout_height="30dp"
          android:visibility="invisible"
        android:layout_marginTop="82dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/imageButton"
        android:background="@drawable/feedback"
         />

    <ImageButton
        android:id="@+id/change_portrait"
        android:layout_width="30dp"
        android:layout_height="30dp" 
        android:background="@drawable/user"
        android:layout_marginRight="20dp"
       android:layout_alignRight="@id/imageButton"
       android:visibility="invisible"
        android:layout_marginTop="110dp"
       
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" 
        android:background="@drawable/setting_edit_send"
        android:id="@+id/sttting_edit_send"
       
        >
        <RelativeLayout 
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            >
              <ImageButton
         android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/setting"
        android:layout_alignParentLeft="true"
        />
         <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/send_img"
       android:layout_alignBottom="@id/settings"
        android:layout_alignParentRight="true"
        />
        <EditText
        android:id="@+id/edtxt_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_toRightOf="@id/settings"
        android:layout_toLeftOf="@id/btn_send"
        android:drawableLeft="@drawable/edt_words4"
        android:background="@drawable/edttext" 
        android:paddingTop="5dp"
        android:layout_alignBottom="@id/settings"
        />

   
        </RelativeLayout>
      <TextView 
          android:layout_width="0dp"
          android:layout_height="0dp"
          />
	
    
    </RelativeLayout>
	
    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="55dip"
        android:alpha="20"
        android:background="#808080"
        android:layout_above="@id/sttting_edit_send" 
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D000"
            android:orientation="vertical"
            android:paddingRight="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                

                <CheckBox
                    android:id="@+id/zoom_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/zoom_buttons"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/compass_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/compass"
                    android:textColor="#FFFFFF" />

            

                <CheckBox
                    android:id="@+id/scroll_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/scroll"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/zoom_gestures_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/zoom_gestures"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/tilt_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/tilt"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/rotate_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rotate"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="100"
        android:background="#c3000000" >

        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="125dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:gravity="left"
                android:text="账号  :"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:autoText="false"
                android:background="@drawable/round_edittext"
                android:capitalize="none"
                android:ems="10"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/check_user_name"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/check_username_exist" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:gravity="left"
                android:text="密码  :"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:autoText="false"
                android:background="@drawable/round_edittext"
                android:capitalize="none"
                android:gravity="fill_horizontal"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/show_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/see_password" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password_layout"
            android:layout_alignRight="@+id/password_layout"
            android:layout_below="@+id/password_layout"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:background="@android:color/transparent"
                android:text="登录"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btn_tourist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="@android:color/transparent"
                android:text="游客"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@android:color/transparent"
                android:text="注册"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
          
        </LinearLayout>
          <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="430dp"
                android:background="@drawable/fun_woo2"
                android:layout_centerHorizontal="true"
                
                />
    </RelativeLayout>
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0525252"
    android:visibility="invisible"
    android:id="@+id/feedback_layout"
     >
    
     <TextView
          android:id="@+id/title_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="意见反馈"
          android:textColor="#ffffff"
          android:textSize="25sp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="30dp"
         />
    <EditText
        android:layout_width="300dp"
        android:layout_height="80dp"
      	android:id="@+id/feedback_edt"
        android:background="@drawable/round_edittext_feedback"
      	android:layout_centerHorizontal="true"
      	android:layout_below="@id/title_view"
        android:drawableLeft="@drawable/edt_words4"
        />
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/feedback_edt"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:id="@+id/cancel_btn"
	    android:background="@android:color/transparent" 
	    android:textColor="#ffffff"
	    android:text="取消"
	    android:layout_marginRight="50dp"
	    android:textSize="20sp"
	    />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:id="@+id/submit_btn"
            android:background="@android:color/transparent"  
	    	android:text="提交"
	    	android:textSize="20sp"
	    	android:layout_marginLeft="50dp"
	    	android:textColor="#ffffff"
            />
    </LinearLayout>
	 <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/fun_woo2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="170dp"
                android:layout_below="@id/button_layout"
                />
</RelativeLayout>
    
</RelativeLayout>